tests/Core/positive/test063.jvc
-- UInt8

def f := \x x;

f 257u8
