tests/Core/negative/test008.jvc
-- undefined symbol

def f;

f
